<resources>
    <string name="app_name">Movie Viewer</string>

<!--    API Value & pre-URLS-->
    <string name="api_key">eecdd7e4d2f0d8a98f7b97e561b0eb1c</string>


<!--    Placeholder Values     -->
    <string name="movie_title_placeholder">Movie Title</string>
    <string name="movie_year_placeholder">XXXX</string>
    <string name="movie_rating">7.5</string>

<!--    Content Descriptions   -->
    <string name="movie_item_background_image_cd">Background image for a movie item in a list; movie
    poster</string>
    <string name="movie_item_rating_image_cd">Image for rating</string>
    <string name="movie_item_favorite_image_cd">Image for favorite</string>
    <string name="most_popular">Most Popular</string>
    <string name="highest_rated">Highest Rated</string>
    <string name="highest_grossing">Highest Grossing</string>
    <string name="to_be_decided">TBD</string>
</resources>
