<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="128dp"
        android:layout_height="192dp"
        android:layout_marginEnd="1dp"
        android:background="@drawable/movie_list_item_border">

        <ImageView
            android:id="@+id/movieItemBgImageView"
            android:scaleType="fitXY"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/movie_item_background_image_cd"
            android:tint="#4D000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/movie_item_background_placeholder" />

        <ImageView
            android:id="@+id/movieRatingImageView"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:contentDescription="@string/movie_item_rating_image_cd"
            app:layout_constraintEnd_toStartOf="@+id/movieRatingTextView"
            app:layout_constraintTop_toTopOf="@+id/movieItemBgImageView"
            app:srcCompat="@drawable/media_rating_img" />

        <ImageView
            android:id="@+id/movieFavoriteImageView"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/movie_item_favorite_image_cd"
            app:layout_constraintStart_toStartOf="@+id/movieItemBgImageView"
            app:layout_constraintTop_toTopOf="@+id/movieItemBgImageView"
            app:srcCompat="@drawable/media_fav_line_img" />

        <TextView
            android:id="@+id/movieRatingTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:text="@string/movie_rating"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/movieItemBgImageView" />

        <TextView
            android:id="@+id/movieYearTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/movie_year_placeholder"
            android:textAlignment="textStart"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="@+id/movieItemBgImageView"
            app:layout_constraintTop_toBottomOf="@+id/movieTitleTextView" />

        <TextView
            android:id="@+id/movieTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginBottom="24dp"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="2"
            android:singleLine="true"
            android:text="@string/movie_title_placeholder"
            android:textAlignment="textStart"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/movieItemBgImageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.12"
            app:layout_constraintStart_toStartOf="@+id/movieItemBgImageView" />

    </androidx.constraintlayout.widget.ConstraintLayout>